# Refactoring

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CreatSuperAgent.md
1111/: NVIDIA_vs_AMD_AI_Analysis_2026.md
1111/CMakeGitTest/my-project/: CMakeLists.txt
1111/CMakeGitTest/my-project/src/: main.cpp
AI-analyz/: AI-doc.md  AI_Online_vs_Offline_Report_2026.docx  AI_Online_vs_Offline_Report_v2_2026.docx  Offline_AI_Guide_2026.docx  (+3 more)
discriminator_estimates/: AI-doc.md  CMakeLists.txt
discriminator_estimates/Doc/: API.md  FFT_Frequency_Estimation.md  Frequency_Recommendations_2026-04-06.md  Full.md  Quick.md
discriminator_estimates/Doc/Doxygen/: Doxyfile  footer.tex  header.tex
discriminator_estimates/Doc/Doxygen/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_db9b36a1f15d6b59be91be0335f17963.html  discr5ea_8c.html  discr5ea_8c_source.html  discr5ea_8h.html  discr5ea_8h_source.html  discr__auto_8c.html  discr__auto_8c_source.html  discr__auto_8h.html  discr__auto_8h_source.html  discr__common_8c.html  discr__common_8c.js  discr__common_8c_source.html  discr__common_8h.html  discr__common_8h.js  discr__common_8h_source.html  discr__types_8h.html  discr__types_8h.js  discr__types_8h_source.html  discrcg_8c.html  discrcg_8c.js  discrcg_8c_source.html  discrcg_8h.html  discrcg_8h.js  discrcg_8h_source.html  discrea_8c.html  discrea_8c.js  discrea_8c_source.html  discrea_8h.html  discrea_8h.js  discrea_8h_source.html  discrqa_8c.html  discrqa_8c.js  discrqa_8c_source.html  (+38 more)
discriminator_estimates/Doc/Doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_31.js  all_32.js  all_33.js  (+58 more)
discriminator_estimates/Doc/Doxygen/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_db9b36a1f15d6b59be91be0335f17963.tex  discr5ea_8c.tex  discr5ea_8c_source.tex  discr5ea_8h.tex  discr5ea_8h_source.tex  discr__auto_8c.tex  discr__auto_8c_source.tex  discr__auto_8h.tex  discr__auto_8h_source.tex  discr__common_8c.tex  discr__common_8c_source.tex  discr__common_8h.tex  discr__common_8h_source.tex  discr__types_8h.tex  discr__types_8h_source.tex  discrcg_8c.tex  discrcg_8c_source.tex  discrcg_8h.tex  discrcg_8h_source.tex  discrea_8c.tex  discrea_8c_source.tex  discrea_8h.tex  discrea_8h_source.tex  discrqa_8c.tex  discrqa_8c_source.tex  discrqa_8h.tex  discrqa_8h_source.tex  discrsd_8c.tex  discrsd_8c_source.tex  discrsd_8h.tex  discrsd_8h_source.tex  fft_8md.tex  fft_page.tex  files.tex  formulas_8md.tex  formulas_page.tex  index.tex  (+15 more)
discriminator_estimates/Doc/Doxygen/pages/: fft.md  formulas.md  mainpage.md  methods_visual.md  recommendations.md  tests.md
discriminator_estimates/Doc/Review/: 2026-03-28_10-21.md  2026-03-28_11-19.md  2026-04-03_5pt_LSQ_comparison.md
discriminator_estimates/Doc/Sphinx/: api.rst  conf.py  fft.rst  formulas.rst  index.rst  methods.rst  recommendations.rst  visual.rst
discriminator_estimates/Doc/Sphinx/html/: .buildinfo  api.html  fft.html  formulas.html  genindex.html  index.html  methods.html  objects.inv  overview.html  py-modindex.html  recommendations.html  search.html  searchindex.js  tests.html  visual.html
discriminator_estimates/Doc/Sphinx/html/.doctrees/: api.doctree  environment.pickle  fft.doctree  formulas.doctree  index.doctree  methods.doctree  overview.doctree  recommendations.doctree  tests.doctree  visual.doctree
discriminator_estimates/Doc/Sphinx/html/_modules/: index.html
discriminator_estimates/Doc/Sphinx/html/_modules/tsignal/: discriminators.html  signal_gen.html
discriminator_estimates/Doc/Sphinx/html/_sources/: api.rst.txt  index.rst.txt  overview.rst.txt  tests.rst.txt
discriminator_estimates/Doc/Sphinx/html/_static/: custom.css  documentation_options.js
discriminator_estimates/Doc/plots/: README.md
discriminator_estimates/Old/: CMakeLists.txt
discriminator_estimates/Old/include/: discr_common.h  discrcg.h  discrsd.h
discriminator_estimates/Old/src/: discr_common.c  discrcg.c  discrea.c  discrqa.c  discrsd.c
discriminator_estimates/include/: discr5ea.h  discr_auto.h  discr_common.h  discr_types.h  discrcg.h  discrea.h  discrqa.h  discrsd.h
discriminator_estimates/src/: discr5ea.c  discr_auto.c  discr_common.c  discrcg.c  discrea.c  discrqa.c  discrsd.c
discriminator_estimates/test_cpp/: all_test.hpp  test_discr_5ea.hpp  test_discr_auto.hpp  test_discr_cg.hpp  test_discr_common.hpp  test_discr_ea.hpp  test_discr_qa.hpp  test_discr_sd.hpp  test_main.cpp
discriminator_estimates/test_gtest/: test_discr_cg_gtest.cpp  test_discr_common_gtest.cpp  test_discr_ea_gtest.cpp  test_discr_qa_gtest.cpp  test_discr_sd_gtest.cpp
discriminator_estimates/test_python/: test_discriminators.py  test_discriminators_5pt.py  test_discriminators_5pt_plot.py  test_discriminators_plot.py  test_fft_frequency.py  test_fft_frequency_plot.py  test_lsq_compare_5_7_9.py
discriminator_estimates/test_python/analysis/: 01_sweep_accuracy.py  02_statistics.py  03_plots_2d.py  04_grid_step.py  05_plots_3d.py  06_noise_montecarlo.py  07_fft_analysis.py  08_report.py  09_lsq_compare.py  10_monotonic_and_3d.py  11_recommendations_plots.py  PLOTS_DESCRIPTION.md  __init__.py  common.py  ~!комманда.txt
discriminator_estimates/test_python/analysis/Animation/: PLAN.md  anim_core.py  anim_export.py  anim_interactive.py  anim_scope.py
discriminator_estimates/test_python/analysis/results/: REPORT.md  extrapolation.csv  fft_analysis.csv  grid_step_sweep.csv  noise_montecarlo.csv  statistics_by_zone.csv  statistics_summary.md  sweep_accuracy.csv
(+30 files in other folders)
