cmake_minimum_required(VERSION 3.24)
# VERSION 3.24 минимально необходима для FIND_PACKAGE_ARGS в FetchContent_Declare.
# Эта опция появилась именно в 3.24 и является ключевой для «гибридного» подхода.

project(my-project LANGUAGES CXX)

# ======================================================================
# КОНЦЕПЦИЯ: Подход 5 — Гибридный FetchContent + FIND_PACKAGE_ARGS
# ======================================================================
#
# ПРОБЛЕМА, которую решает этот подход:
#   Обычно CMakeLists.txt жёстко кодирует КАК и ОТКУДА брать зависимости.
#   Это ломает переносимость: путь у одного разработчика не совпадает
#   с путём на CI-сервере или у коллеги.
#
# РЕШЕНИЕ:
#   CMakeLists.txt описывает только ЧТО нужно (имя + версия + git-адрес).
#   КАК и ОТКУДА берётся — управляется снаружи через CMakePresets.json.
#
# ПРИОРИТЕТ при вызове FetchContent_MakeAvailable:
#   1. Если задана переменная FETCHCONTENT_SOURCE_DIR_<ИМЯ>
#      → CMake полностью обходит git и использует указанную папку напрямую
#        (add_subdirectory). Uncommitted изменения видны. Используется
#        разработчиком при одновременной работе с несколькими проектами.
#
#   2. Если FIND_PACKAGE_ARGS задан и find_package(...) успешен
#      → Используется уже установленная в системе (или через vcpkg/conan)
#        версия библиотеки. Git не задействован.
#
#   3. Иначе (fallback)
#      → git clone из GIT_REPOSITORY по указанному GIT_TAG.
#        Клонирует только закоммиченный код. Используется на CI или
#        когда нужна строго определённая версия зависимости.
#
# УПРАВЛЕНИЕ СЦЕНАРИЕМ через CMakePresets.json:
#   cmake --preset dev-local   → сценарий 1 (рабочая копия)
#   cmake --preset dev-tag     → сценарий 3 (git clone по тегу)
#
# ВАЖНО: этот файл не меняется при переключении сценариев.
# Вся конфигурация снаружи — в пресетах или переменных окружения.
# ======================================================================

include(FetchContent)
# Подключаем встроенный модуль CMake для управления внешними зависимостями.
# FetchContent позволяет скачивать/клонировать исходники и собирать их
# как часть текущего проекта (в отличие от find_package, который ищет
# уже собранные бинарники).

# ----------------------------------------------------------------------
# Объявление зависимости: lib-network
# ----------------------------------------------------------------------
FetchContent_Declare(
  libnetwork
  # Имя "libnetwork" (без дефиса!) — это важно.
  # FetchContent автоматически образует имя переменной-оверрайда:
  #   FETCHCONTENT_SOURCE_DIR_<ИМЯ_ПРОПИСНЫМИ> = FETCHCONTENT_SOURCE_DIR_LIBNETWORK
  # Если бы имя было "lib-network", переменная содержала бы дефис:
  #   FETCHCONTENT_SOURCE_DIR_LIB-NETWORK — это работает, но неудобно
  #   в shell-скриптах и некоторых инструментах. Лучше избегать.

  GIT_REPOSITORY /home/alex/C++/CMakeGitTest/lib-network
  # Путь к локальному git-репозиторию. Git понимает абсолютные пути
  # напрямую — без file://, хотя оба формата рабочие.
  # Отличие file:// от bare-пути: file:// отключает оптимизацию
  # hardlink-объектов (делает полную копию), bare-путь использует
  # hardlinks → быстрее для локальных репо.

  GIT_TAG v2.0.0
  # Тег, ветка или полный хеш коммита, который будет склонирован.
  # Если задан FETCHCONTENT_SOURCE_DIR_LIBNETWORK — эта строка игнорируется,
  # git вообще не вызывается. Иначе CMake делает:
  #   git clone <GIT_REPOSITORY> --branch v2.0.0 --depth 1
  # ВАЖНО: в git-репо должен существовать тег v2.0.0, иначе — ошибка.

  FIND_PACKAGE_ARGS 2.0 CONFIG
  # (CMake 3.24+) Перед git clone сначала пробует:
  #   find_package(network 2.0 CONFIG)
  # Если библиотека установлена в системе (cmake --install) и
  # networkConfig.cmake найден в CMAKE_PREFIX_PATH — используется она.
  # "CONFIG" означает режим поиска Config-файла (networkConfig.cmake),
  # в отличие от Module-режима (FindNetwork.cmake).
  # "2.0" — минимальная требуемая версия (SameMajorVersion совместимость).
)

# ----------------------------------------------------------------------
# Объявление зависимости: lib-protocol
# ----------------------------------------------------------------------
FetchContent_Declare(
  libprotocol
  GIT_REPOSITORY /home/alex/C++/CMakeGitTest/lib-protocol
  GIT_TAG        v2.0.0
  FIND_PACKAGE_ARGS 2.0 CONFIG
  # Аналогично libnetwork. Оверрайд-переменная: FETCHCONTENT_SOURCE_DIR_LIBPROTOCOL
)

# ----------------------------------------------------------------------
# Активация всех объявленных зависимостей
# ----------------------------------------------------------------------
# ЛУЧШАЯ ПРАКТИКА: сначала объявить ВСЕ зависимости через Declare,
# и только потом вызвать MakeAvailable для всех разом.
# Это позволяет CMake корректно разрешать транзитивные зависимости:
# если libnetwork и libprotocol используют одну общую либу — она
# подключится один раз, а не дважды.
FetchContent_MakeAvailable(libnetwork libprotocol)
# После этого вызова в текущем CMake-контексте доступны цели:
#   network::network   (из lib-network/CMakeLists.txt через ALIAS)
#   protocol::protocol (из lib-protocol/CMakeLists.txt через ALIAS)
# Одинаковые имена целей независимо от того, как была получена библиотека:
# через git clone, FETCHCONTENT_SOURCE_DIR или find_package.

# ======================================================================
# Сборка основного приложения
# ======================================================================

add_executable(myapp src/main.cpp)

target_link_libraries(myapp PRIVATE network::network protocol::protocol)
# PRIVATE означает: зависимости нужны только для сборки myapp,
# но не транзитивно передаются потребителям myapp (если бы myapp
# была библиотекой). Для executable это формальность, но хорошая практика.

target_compile_features(myapp PRIVATE cxx_std_17)
# Требуем C++17. CMake сам добавит нужный флаг компилятора (-std=c++17).
# Не указываем флаг вручную (-std=c++17 в compile_options) — это
# непереносимо между компиляторами.
